--- a/config/immortalwrt-master/config
+++ b/config/immortalwrt-master/config
@@ -5981,8 +5981,7 @@ CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-openvpn-fil is not set
 # CONFIG_PACKAGE_luci-i18n-openvpn-fr is not set
 # CONFIG_PACKAGE_luci-i18n-openvpn-he is not set
-# CONFIG_PACKAGE_luci-i18n-
--hi is not set
+# CONFIG_PACKAGE_luci-i18n-openvpn-hi is not set
 # CONFIG_PACKAGE_luci-i18n-openvpn-hu is not set
 # CONFIG_PACKAGE_luci-i18n-openvpn-it is not set
 # CONFIG_PACKAGE_luci-i18n-openvpn-ja is not set
