--- a/config/openwrt-main/config
+++ b/config/openwrt-main/config
@@ -5319,6 +5319,7 @@ CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-wol is not set
 # CONFIG_PACKAGE_luci-app-xfrpc is not set
 # CONFIG_PACKAGE_luci-app-xinetd is not set
+CONFIG_PACKAGE_uci-app-ssr-plus=y
 # end of 3. Applications
 
 #
